[package]
name = "simple-crypto"
version = "1.0.3"
edition = "2021"
description = "A rust crate for simple/secure Cryptograhic Primitves"
license = "BSD-3-Clause"
repository = "https://github.com/CalebCouch/web5-rust.git"

[dependencies]
secp256k1 = {version="0.29.0", features=["global-context", "serde", "rand-std", "alloc", "rand"]}
bitcoin_hashes = {version="0.14.0", features=["schemars"]}
bitcoin = {version="0.32.2", features=["serde"]}
ecies = "0.2.7"
serde = "1.0.210"
serde_json = "1.0.128"
hex = "0.4.3"
erased-serde = "0.4.5"
thiserror = "1.0.64"
serde_with = "3.11.0"
either = {version="1.13.0", features=["serde"]}
schemars = {version="0.8.21", features=["either"]}
